feat: get admin board
